<?xml version="1.0"?>
<package format="2">
  <name>road_segmentation</name>
  <version>0.0.1</version>
  <description>The road_segmentation package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>usb_cam</exec_depend>

</package>
